<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:background="#010001">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp">

    </View>


    <LinearLayout
        android:id="@+id/lnrLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_estilo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="20">



        <TextView
            android:id="@+id/txvwDateId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw_datetime"
            style="@style/nikyTxtStyleEnable"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="9"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <TextView
            android:id="@+id/txvwLapDuraId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw_lapdur"
            style="@style/nikyTxtStyleEnable"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <TextView
            android:id="@+id/txvwLapDistId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw_lapdist"
            style="@style/nikyTxtStyleEnable"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <TextView
            android:id="@+id/txvwLapLocId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtvw_laploc"
            style="@style/nikyTxtStyleEnable"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrLayout2Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:weightSum="12"
        >

        <ListView
            android:id="@+id/listvwLapId"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:paddingTop="2dp"
            android:paddingBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_estilo"
            android:divider="#00006F"
            android:dividerHeight="2dp"
            >
        </ListView>


        <Button
            android:id="@+id/btnCloseActId"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/btn_close_view"
            style="@style/nikyTxtStyleEnable"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_estilo"/>

    </LinearLayout>

</LinearLayout>